# CppSPMD

./: .gitignore  CMakeLists.txt  LICENSE  SPMD.sln  SPMD.vcxproj  SPMD.vcxproj.filters  avx_mathfun_tweaked.h  main.cpp  noise.ispc  spmd_avx2-i32x8.h  spmd_sse2-i32x4.h  spmdv2_avx2-i32x8.h  volume.ispc
cmake/: FindTBB.cmake  clang.cmake  cppspmd.cmake  gcc.cmake  icc.cmake  ispc.cmake  msvc.cmake
src/: CMakeLists.txt  main.cpp  mandelbrot.cpp  mandelbrot.ispc  noise.cpp  options.cpp  options.ispc  simple.cpp  spmd_avx2-i32x8.h  volume.cpp
src/common/: common.h  spmd_avx2-i32x8.h
